# fastsar-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  build.sh
.github/workflows/: audit.yml  coverage.yml  release.yml  test.yml
src/: arguments.rs  aws.rs  config.rs  error.rs  history.rs  json.rs  main.rs  shell.rs  skim.rs  util.rs
tests/data/: lines.txt
