[package]
name = "fastsar"
version = "0.1.5"
authors = ["Armin Grodon <me@armingrodon.de>"]
description = "Switch between AWS roles quickly using fuzzy matching"
documentation = "https://github.com/x4121/fastsar-rs"
homepage = "https://github.com/x4121/fastsar-rs"
repository = "https://github.com/x4121/fastsar-rs"
keywords = ["aws", "sts"]
categories = ["authentication", "command-line-utilities"]
license = "MIT"
readme = "README.md"
edition = "2018"

[dependencies]
anyhow = "~1.0"
config = "~0.13"
futures = "~0.3"
log = "~0.4"
rusoto_core = "~0.48"
rusoto_credential = "~0.48"
rusoto_sts = "~0.48"
serde_derive = "~1.0"
serde_json = "~1.0"
shellexpand = "~2.1"
simplelog = "~0.12"
skim = "~0.9"
structopt = "~0.3"
subprocess = "~0.2"
termcolor = "~1.1"

[dependencies.openssl]
version = "~0.10"
features = ["vendored"]

[dependencies.serde]
version = "~1.0"
features = ["derive"]

[dependencies.tokio]
version = "~1.19"
features = ["full"]

[[bin]]
name = "fastsar"
bench = false

[dev-dependencies]
quickcheck = "~1.0"
quickcheck_macros = "~1.0"
rusoto_mock = "~0.48"
tokio-test = "~0.4"

[dev-dependencies.rusoto_sts]
version = "~0.48"
features = ["serialize_structs"]
